--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.3.3",
     "pillow>=12.0.0",
     "qdrant-client>=1.16.2",
+    "sentence-transformers>=5.2.0",
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
