--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.3.5",
     "onnxruntime-gpu>=1.23.2",
-    "optimum>=2.0.0",
+    "optimum[onnxruntime]>=2.0.0",
     "pandas>=2.3.3",
     "pillow>=12.0.0",
     "qdrant-client>=1.16.2",
@@ -15,7 +15,7 @@ dependencies = [
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
-    "transformers>=4.57.3",
+    "transformers<4.56.0",
     "tritonclient[all]>=2.63.0",
     "ultralytics>=8.3.240",
 ]
