Update docker-compose.yml to use HOME environment variable for Hugging Face cache path and modify YOLOv8 model configuration for dynamic input dimensions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - "8001:8001" # gRPC
       - "8002:8002" # Metrics
     volumes:
-      - ./.cache/huggingface:/root/.cache/huggingface
+      - ${HOME}/.cache/huggingface:/root/.cache/huggingface
       - ./model_repository:/models
     command: >
       tritonserver
